--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Startsida</h1>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus reprehenderit accusantium ipsam? Eum aut voluptate, vitae iure iusto ut nihil, quidem maiores delectus asperiores eaque fuga eius repellat aperiam et?</p>
     
 </body>
 </html>
