--- a/Info.html
+++ b/Info.html
@@ -43,7 +43,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Info.html">Om mig!</a>
+                <a class="nav-link" href="#">Galleri</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -84,15 +84,7 @@
       </nav>
 <main>
 
-    <div class="container">
-        <div class="row">
-          <div class="col">Column</div>
-          <div class="col">Column</div>
-          <div class="w-100"></div>
-          <div class="col">Column</div>
-          <div class="col">Column</div>
-        </div>
-      </div>
+  
 
 </main>
     
