--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Min Portfolio</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,7 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
+
+
   <body>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -20,9 +23,10 @@
     ></script>
 
     <header>
+
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Meny</a>
+          <a class="navbar-brand" href="index.html">Meny</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -56,41 +60,48 @@
                   Link
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Projekt 1</a></li>
-                  <li><a class="dropdown-item" href="#">Projekt 2</a></li>
-                  <li><a class="dropdown-item" href="#">Projekt 3</a></li>
-                  <li><a class="dropdown-item" href="#">Projekt 4</a></li>
+                  <li><a class="dropdown-item" href="Projekt.html">Projekt 1</a></li>
+                  <li><a class="dropdown-item" href="Projekt2.html">Projekt 2</a></li>
+                  <li><a class="dropdown-item" href="Projekt3.html">Projekt 3</a></li>
+                  <li><a class="dropdown-item" href="Projekt4.html">Projekt 4</a></li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#">somthing</a>
+                    <a class="dropdown-item" href="index.html">Galleri</a>
                   </li>
                 </ul>
               </li>
               
             </ul>
-            <form class="d-flex" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success" type="submit">
-                Search
-              </button>
-            </form>
           </div>
         </div>
       </nav>
+</header>
+
 <main>
 
     <div class="container">
         <div class="row">
-          <div class="col">Column</div>
-          <div class="col">Column</div>
+          <div class="col">Projekt 1
+            <div class="flex-container">
+              <div class="gridtext">text 1</div>
+            </div>
+          </div>
+          <div class="col">Projekt 2
+            <div class="flex-container">
+              <div class="gridtext">text 2</div>
+            </div>
+          </div>
           <div class="w-100"></div>
-          <div class="col">Column</div>
-          <div class="col">Column</div>
+          <div class="col">Projekt 3
+            <div class="flex-container">
+              <div class="gridtext">text 3</div>
+            </div>
+          </div>
+          <div class="col">Project 4
+            <div class="flex-container">
+              <div class="gridtext">text 4</div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -99,61 +110,20 @@
 
     <footer id="footer" class="text-center text-white" style="background-color: #f1f1f1">
       <!-- Grid container -->
-      <div class="container pt-4">
+      <div class="containericons">
         <!-- Section: Social media -->
         <section class="mb-4">
           <!-- Facebook -->
-          <a
-            class="btn btn-link btn-floating btn-lg text-dark m-1"
-            href="#!"
-            role="button"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-facebook-f"></i
-          ></a>
+          <a href="https://sv-se.facebook.com/" class="fa fa-facebook"></a>
 
-          <!-- Twitter -->
-          <a
-            class="btn btn-link btn-floating btn-lg text-dark m-1"
-            href="#!"
-            role="button"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-twitter"></i
-          ></a>
-
-          <!-- Google -->
-          <a
-            class="btn btn-link btn-floating btn-lg text-dark m-1"
-            href="#!"
-            role="button"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-google"></i
-          ></a>
-
-          <!-- Instagram -->
-          <a
-            class="btn btn-link btn-floating btn-lg text-dark m-1"
-            href="#!"
-            role="button"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-instagram"></i
-          ></a>
+           <!-- Twitter -->
+           <a href="https://twitter.com/?lang=sv" class="fa fa-twitter"></a>
 
           <!-- Linkedin -->
-          <a
-            class="btn btn-link btn-floating btn-lg text-dark m-1"
-            href="#!"
-            role="button"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-linkedin"></i
-          ></a>
-          <!-- Github -->
-          <a
-            class="btn btn-link btn-floating btn-lg text-dark m-1"
-            href="#!"
-            role="button"
-            data-mdb-ripple-color="dark"
-            ><i class="fab fa-github"></i
-          ></a>
+          <a href="https://se.linkedin.com/" class="fa fa-linkedin"></a>
+          
+          <p id="footerinfo" > Email: Simon.Andersson1@live.com <br>
+          Tele: 0705786499</p>
         </section>
         <!-- Section: Social media -->
       </div>
@@ -164,8 +134,8 @@
         class="text-center text-dark p-3"
         style="background-color: rgba(0, 0, 0, 0.2)"
       >
-        © 2020 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        © 2023 Copyright
+        <a class="text-dark" href="https://mdbootstrap.com/"></a>
       </div>
       <!-- Copyright -->
     </footer>
