--- a/Projekt4.html
+++ b/Projekt4.html
@@ -28,7 +28,7 @@
 
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Meny</a>
+          <a class="navbar-brand" href="index.html">Galleri</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -46,8 +46,6 @@
               style="--bs-scroll-height: 100px"
             >
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="Info.html">Om mig!</a>
               </li>
